<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Historical Places</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_description">Splash</string>
    <string name="add_place">Add Visited Place</string>
    <string name="name">Name:</string>
    <string name="purpose">Description:</string>
    <string name="address">Address:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="closeDay">Weekly Closed:</string>
    <string name="openTime">Daily Visit Time:</string>
    <string name="description">District:</string>
    <string name="enter_name">name</string>
    <string name="enter_address">address</string>
    <string name="enter_latitude">latitude</string>
    <string name="enter_longitude">longitude</string>
    <string name="enter_closeDay">close day</string>
    <string name="enter_openTime">daily open time</string>
    <string name="enter_description">service description</string>
    <string name="btnSave">Save</string>
    <string name="place_list">Visited Place</string>
    <string name="place_viewed">Details</string>
    <string name="google_map">Google Map</string>
    <string name="addShoppingComplex">Add Place</string>
    <string name="descriptionplace">"Description: "</string>
    <string name="title_activity_show_map">ShowMapActivity</string>
    <string name="historicalplaces">Historical Places</string>
    <string name="loading">Loading\.\.\.</string>

</resources>